# newsmake

./: .gitignore  CMakeLists.txt  NuGet.config  Program.cs  README.md  StringExtension.cs  appveyor.yml  fs.hpp.in  main.cpp  newsmake.csproj  newsmake.sln  newsmake.vcxproj  stylecop.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  dotnetcore-publish.yml  dotnetcore.yml
newsmake/: Command.cs  Commands.cs  Program.cs  newsmake.csproj
newsmake/newsmake/: Command.cs  CommandParser.cs  CommandParsor.cs  Commands.cs  Group.cs  Option.cs  Program.cs
